--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^7.18.0",
     "axios": "^1.7.7",
     "vue": "^3.4.29"
   },
